--- a/package.json
+++ b/package.json
@@ -1,38 +1,52 @@
 {
-  "name": "hr-control",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.12.0",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+	"name": "hr-control",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"@testing-library/jest-dom": "5.12.0",
+		"@testing-library/react": "11.2.7",
+		"@testing-library/user-event": "12.8.3",
+		"react": "17.0.2",
+		"react-dom": "17.0.2",
+		"react-scripts": "4.0.3",
+		"web-vitals": "1.1.2"
+	},
+	"devDependencies": {
+		"@babel/core": "7.1.2",
+		"@babel/preset-env": "7.1.0",
+		"@babel/preset-react": "7.0.0",
+		"babel-loader": "8.0.4",
+		"css-loader": "1.0.0",
+		"file-loader": "6.2.0",
+		"html-webpack-plugin": "3.2.0",
+		"source-map-loader": "1.1.2",
+		"style-loader": "0.23.0",
+		"webpack": "4.20.2",
+		"webpack-cli": "3.1.1",
+		"webpack-dev-server": "3.1.14"
+	},
+	"scripts": {
+		"start:dev": "webpack-dev-server --mode development --open --hot",
+		"build:prod": "webpack --mode production",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject"
+	},
+	"eslintConfig": {
+		"extends": [
+			"react-app",
+			"react-app/jest"
+		]
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	}
 }
